Class updates in popups: we should never use --expanded and --readonly on the same selector now

--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -16,7 +16,7 @@
                     </div>
                   </div>
 
-                  <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector pmx-selector--readonly">
                     <div class="pmx-selector__item">
                       <div class="pmx-selector__block">
                         <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">282
@@ -52,7 +52,7 @@
                     </div>
                   </div>
 
-                  <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                  <div class="pmx-selector pmx-selector--readonly">
                     <div class="pmx-selector__item">
                       <div class="pmx-selector__block">
                         <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">297
