--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -4,7 +4,7 @@
 
       <div class="pmx-field">
         <div class="pmx-field__inner">
-          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+          <div class="pmx-selector pmx-selector--readonly">
             <div class="pmx-selector__item">
               <div class="pmx-selector__block">
                 ${colorHTML}
