--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -110,7 +110,7 @@
                         <div class="itemBoxTable__bodyCellInner ">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                              <div class="pmx-selector pmx-selector--readonly">
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
@@ -138,7 +138,7 @@
                         <div class="itemBoxTable__bodyCellInner ">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                              <div class="pmx-selector pmx-selector--readonly">
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
@@ -207,7 +207,7 @@
                         <div class="itemBoxTable__bodyCellInner ">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                              <div class="pmx-selector pmx-selector--readonly">
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
@@ -237,7 +237,7 @@
                         <div class="itemBoxTable__bodyCellInner ">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                              <div class="pmx-selector pmx-selector--readonly">
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
@@ -297,7 +297,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
@@ -330,7 +330,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
@@ -364,7 +364,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
@@ -399,7 +399,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #E30022;" data-color="#E30022">ग़</div>
