--- a/_includes/popups/multiSelector-status.html
+++ b/_includes/popups/multiSelector-status.html
@@ -39,7 +39,7 @@
                 <div class="pmx-field">
                   <div class="pmx-field__inner">
                     <div class="pmx-field__value">
-                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
                             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_color--prefix" style="background-color: #ff9b9b">ध</div>
@@ -67,7 +67,7 @@
                 <div class="pmx-field">
                   <div class="pmx-field__inner">
                     <div class="pmx-field__value">
-                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
                             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_color--prefix" style="background-color: #00BFFF">ध</div>
@@ -95,7 +95,7 @@
                 <div class="pmx-field">
                   <div class="pmx-field__inner">
                     <div class="pmx-field__value">
-                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
                             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_color--prefix" style="background-color: #F4CA16">ध</div>
@@ -122,7 +122,7 @@
                 <div class="pmx-field">
                   <div class="pmx-field__inner">
                     <div class="pmx-field__value">
-                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
                             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_color--prefix" style="background-color: #0BDA51">ध</div>
