--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -58,7 +58,7 @@
                             </div>
                           </div>
 
-                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
                                 <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">dev-team
@@ -98,7 +98,7 @@
                             </div>
                           </div>
 
-                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
                                 <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">back-end
@@ -138,7 +138,7 @@
                             </div>
                           </div>
 
-                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
                                 <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">282
@@ -204,7 +204,7 @@
                             </div>
                           </div>
 
-                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
                                 <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">282
@@ -240,7 +240,7 @@
                             </div>
                           </div>
 
-                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
                                 <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">297
@@ -276,7 +276,7 @@
                             </div>
                           </div>
 
-                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
                                 <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">dev-team
@@ -312,7 +312,7 @@
                             </div>
                           </div>
 
-                          <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                          <div class="pmx-selector pmx-selector--readonly">
                             <div class="pmx-selector__item">
                               <div class="pmx-selector__block">
                                 <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">back-end
