--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -98,7 +98,7 @@
                                     <div class="itemBoxTable__bodyCellInner ">
                                        <div class="pmx-field">
                                           <div class="pmx-field__inner">
-                                             <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                             <div class="pmx-selector pmx-selector--readonly">
                                                 <div class="pmx-selector__item">
                                                    <div class="pmx-selector__block">
                                                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Arnaud</div>
@@ -154,7 +154,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                    <div class="pmx-selector pmx-selector--readonly">
                                        <div class="pmx-selector__item">
                                           <div class="pmx-selector__block">
                                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Esteban</div>
@@ -179,7 +179,7 @@
                                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Include">
                                        <div class="pmx-field">
                                           <div class="pmx-field__inner">
-                                             <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                             <div class="pmx-selector pmx-selector--readonly">
                                                 <div class="pmx-selector__item">
                                                    <div class="pmx-selector__block">
                                                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</span>
@@ -196,7 +196,7 @@
                                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Exclude">
                                        <div class="pmx-field">
                                           <div class="pmx-field__inner">
-                                             <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                             <div class="pmx-selector pmx-selector--readonly">
                                                 <div class="pmx-selector__item">
                                                    <div class="pmx-selector__block">
                                                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</span>
@@ -223,7 +223,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                    <div class="pmx-selector pmx-selector--readonly">
                                        <div class="pmx-selector__item">
                                           <div class="pmx-selector__block">
                                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Arnaud</div>
@@ -248,7 +248,7 @@
                                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Include">
                                        <div class="pmx-field">
                                           <div class="pmx-field__inner">
-                                             <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                             <div class="pmx-selector pmx-selector--readonly">
                                                 <div class="pmx-selector__item">
                                                    <div class="pmx-selector__block">
                                                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</span>
@@ -265,7 +265,7 @@
                                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Exclude">
                                        <div class="pmx-field">
                                           <div class="pmx-field__inner">
-                                             <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                             <div class="pmx-selector pmx-selector--readonly">
                                                 <div class="pmx-selector__item">
                                                    <div class="pmx-selector__block">
                                                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</span>
@@ -292,7 +292,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                    <div class="pmx-selector pmx-selector--readonly">
                                        <div class="pmx-selector__item">
                                           <div class="pmx-selector__block">
                                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Nora</div>
@@ -317,7 +317,7 @@
                                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Include">
                                        <div class="pmx-field">
                                           <div class="pmx-field__inner">
-                                             <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                             <div class="pmx-selector pmx-selector--readonly">
                                                 <div class="pmx-selector__item">
                                                    <div class="pmx-selector__block">
                                                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</span>
@@ -334,7 +334,7 @@
                                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Exclude">
                                        <div class="pmx-field">
                                           <div class="pmx-field__inner">
-                                             <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                             <div class="pmx-selector pmx-selector--readonly">
                                                 <div class="pmx-selector__item">
                                                    <div class="pmx-selector__block">
                                                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</span>
@@ -361,7 +361,7 @@
                                           </div>
                                        </div>
                                     </div>
-                                    <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                    <div class="pmx-selector pmx-selector--readonly">
                                        <div class="pmx-selector__item">
                                           <div class="pmx-selector__block">
                                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Ward</div>
@@ -386,7 +386,7 @@
                                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Include">
                                        <div class="pmx-field">
                                           <div class="pmx-field__inner">
-                                             <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                             <div class="pmx-selector pmx-selector--readonly">
                                                 <div class="pmx-selector__item">
                                                    <div class="pmx-selector__block">
                                                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</span>
@@ -403,7 +403,7 @@
                                     <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Exclude">
                                        <div class="pmx-field">
                                           <div class="pmx-field__inner">
-                                             <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                                             <div class="pmx-selector pmx-selector--readonly">
                                                 <div class="pmx-selector__item">
                                                    <div class="pmx-selector__block">
                                                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</span>
