--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -33,7 +33,7 @@
 
                   <div class="pmx-field">
                     <div class="pmx-field__inner">
-                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Any</span>
@@ -55,7 +55,7 @@
 
                   <div class="pmx-field">
                     <div class="pmx-field__inner">
-                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">title</span>
@@ -77,7 +77,7 @@
 
                   <div class="pmx-field">
                     <div class="pmx-field__inner">
-                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
@@ -99,7 +99,7 @@
 
                   <div class="pmx-field">
                     <div class="pmx-field__inner">
-                      <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                      <div class="pmx-selector pmx-selector--readonly">
                         <div class="pmx-selector__item">
                           <div class="pmx-selector__block">
                             <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
