--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -42,7 +42,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -63,7 +63,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -84,7 +84,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -105,7 +105,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -126,7 +126,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -147,7 +147,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -181,7 +181,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -202,7 +202,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -223,7 +223,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">pmX Projects and Support</span>
@@ -244,7 +244,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">pmX Projects and Support</span>
@@ -265,7 +265,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Product Development</span>
@@ -299,7 +299,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Operations</span>
@@ -320,7 +320,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Operations</span>
@@ -341,7 +341,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Operations</span>
@@ -362,7 +362,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Prof. Serv.</span>
@@ -383,7 +383,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Prof. Serv.</span>
@@ -404,7 +404,7 @@
 
                     <div class="pmx-field">
                       <div class="pmx-field__inner">
-                        <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                        <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Prof. Serv.</span>
