--- a/_includes/blocks/popup/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/popup/ms-tags-colors-color-sublist.html
@@ -6,7 +6,7 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #dcdcdc;" data-color="#dcdcdc">ग़</span>
@@ -21,7 +21,7 @@
           <div class="itemBoxTable__bodyCellInner">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
@@ -34,7 +34,7 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</span>
@@ -49,7 +49,7 @@
           <div class="itemBoxTable__bodyCellInner">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
@@ -67,7 +67,7 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</span>
@@ -82,7 +82,7 @@
           <div class="itemBoxTable__bodyCellInner">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
@@ -100,7 +100,7 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</span>
@@ -115,7 +115,7 @@
           <div class="itemBoxTable__bodyCellInner">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
@@ -133,7 +133,7 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #b8860b;" data-color="#b8860b">ग़</span>
@@ -148,7 +148,7 @@
           <div class="itemBoxTable__bodyCellInner">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
@@ -166,7 +166,7 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</span>
@@ -181,7 +181,7 @@
           <div class="itemBoxTable__bodyCellInner">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
@@ -199,7 +199,7 @@
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #343434;" data-color="#343434">ग़</span>
@@ -214,7 +214,7 @@
           <div class="itemBoxTable__bodyCellInner">
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block ">
                       <div class="pmx-selector__blockPart pmx-selector__blockPart--field">
