--- a/_includes/blocks/popup/ms-tags-filter-sublist.html
+++ b/_includes/blocks/popup/ms-tags-filter-sublist.html
@@ -7,7 +7,7 @@
 
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</span>
@@ -26,7 +26,7 @@
 
             <div class="pmx-field">
               <div class="pmx-field__inner">
-                <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
                     <div class="pmx-selector__block">
                       <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</span>
