--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -109,7 +109,7 @@
                         <div class="itemBoxTable__bodyCellInner">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                              <div class="pmx-selector pmx-selector--readonly">
                               <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block ">
                                   <div class="pmx-selector__blockPart pmx-selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
@@ -131,7 +131,7 @@
                         <div class="itemBoxTable__bodyCellInner">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                              <div class="pmx-selector pmx-selector--readonly">
                               <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block ">
                                   <div class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</div>
@@ -193,7 +193,7 @@
                         <div class="itemBoxTable__bodyCellInner">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                              <div class="pmx-selector pmx-selector--readonly">
                               <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block ">
                                   <div class="pmx-selector__blockPart pmx-selector__blockPart--field">today</div>
@@ -215,7 +215,7 @@
                         <div class="itemBoxTable__bodyCellInner">
                           <div class="pmx-field">
                             <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--expanded pmx-selector--readonly">
+                              <div class="pmx-selector pmx-selector--readonly">
                                 <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                   <div class="pmx-selector__block ">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</div>
