fix slectors in itembox positions

--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -36,8 +36,6 @@
           <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--align-right" style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
 
-              <div class="pmx-field">
-                <div class="pmx-field__inner">
                   <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
                     <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
                       <div class="pmx-selector__block">
@@ -51,8 +49,6 @@
                       </div>
                     </div>
                   </div>
-                </div>
-              </div>
 
             </div>
           </li>
@@ -75,8 +71,6 @@
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--align-right" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
 
-                    <div class="pmx-field">
-                      <div class="pmx-field__inner">
                         <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
                           <div class="pmx-selector__item JS_selectorItem">
                             <div class="pmx-selector__block">
@@ -90,8 +84,6 @@
                             </div>
                           </div>
                         </div>
-                      </div>
-                    </div>
 
                   </div>
                 </li>
@@ -107,17 +99,17 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-                          <div class="pmx-field">
-                            <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--readonly">
+
+
+                            <div class="pmx-selector pmx-selector--readonly">
                               <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block ">
                                   <div class="pmx-selector__blockPart pmx-selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
                                 </div>
                               </div>
                             </div>
-                            </div>
-                          </div>
+
+
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -129,17 +121,15 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-                          <div class="pmx-field">
-                            <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--readonly">
+
+                            <div class="pmx-selector pmx-selector--readonly">
                               <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block ">
                                   <div class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</div>
                                 </div>
                               </div>
                             </div>
-                            </div>
-                          </div>
+
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -160,8 +150,8 @@
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--align-right" style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner">
-                    <div class="pmx-field">
-                      <div class="pmx-field__inner">
+
+
                         <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
                           <div class="pmx-selector__item JS_selectorItem pmx-selector__item--selected">
                             <div class="pmx-selector__block">
@@ -175,8 +165,8 @@
                             </div>
                           </div>
                         </div>
-                      </div>
-                    </div>
+
+
                   </div>
                 </li>
                 <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -191,17 +181,17 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-                          <div class="pmx-field">
-                            <div class="pmx-field__inner">
-                              <div class="pmx-selector pmx-selector--readonly">
+
+
+                            <div class="pmx-selector pmx-selector--readonly">
                               <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block ">
                                   <div class="pmx-selector__blockPart pmx-selector__blockPart--field">today</div>
                                 </div>
                               </div>
                             </div>
-                            </div>
-                          </div>
+
+
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -213,8 +203,8 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-                          <div class="pmx-field">
-                            <div class="pmx-field__inner">
+
+
                               <div class="pmx-selector pmx-selector--readonly">
                                 <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                   <div class="pmx-selector__block ">
@@ -222,8 +212,8 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>
-                          </div>
+
+
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -274,15 +264,15 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-                          <div class="pmx-field">
-                            <div class="pmx-field__inner">
+
+                            <div class="pmx-selector">
                               <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block ">
                                   <div class="pmx-selector__blockPart pmx-selector__blockPart--field">today</div>
                                 </div>
                               </div>
                             </div>
-                          </div>
+
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -316,15 +306,16 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-                          <div class="pmx-field">
-                            <div class="pmx-field__inner">
+
+
+                            <div class="pmx-selector">
                               <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block ">
                                   <div class="pmx-selector__blockPart pmx-selector__blockPart--field">18/03/18</div>
                                 </div>
                               </div>
                             </div>
-                          </div>
+
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -358,15 +349,16 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-                          <div class="pmx-field">
-                            <div class="pmx-field__inner">
+
+
+                            <div class="pmx-selector">
                               <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block ">
                                   <div class="pmx-selector__blockPart pmx-selector__blockPart--field">19/03/18-20/03/18</div>
                                 </div>
                               </div>
                             </div>
-                          </div>
+
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
@@ -400,15 +392,15 @@
                     <ul class="itemBoxTable__bodyRow">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
-                          <div class="pmx-field">
-                            <div class="pmx-field__inner">
+
+                            <div class="pmx-selector">
                               <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
                                 <div class="pmx-selector__block ">
                                   <div class="pmx-selector__blockPart pmx-selector__blockPart--field">next 2 weeks (12/03/18-25/03/18)</div>
                                 </div>
                               </div>
                             </div>
-                          </div>
+
                         </div>
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
